# excelarate

./: LICENSE  README.md  pyproject.toml
examples/simple_table/: simple_table.py  simple_table.xlsx
excelent/: __init__.py
excelerate/: _sheet.py
tests/: test_excelent.py  test_sheet.py
